--- a/Jorge.Gslate.Test/Jorge.Gslate.Test.csproj
+++ b/Jorge.Gslate.Test/Jorge.Gslate.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
@@ -13,10 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Jorge.ClinicaApp.Infrastructure\Jorge.ClinicaApp.Infrastructure.csproj" />
-    <ProjectReference Include="..\Jorge.ClinicaApp.Model\Jorge.ClinicaApp.Model.csproj" />
-    <ProjectReference Include="..\Jorge.ClinicaApp.Repository\Jorge.ClinicaApp.Repository.csproj" />
-    <ProjectReference Include="..\Jorge.ClinicaApp.Services\Jorge.ClinicaApp.Services.csproj" />
+    <ProjectReference Include="..\Jorge.Gslate.Infrastructure\Jorge.Gslate.Infrastructure.csproj" />
+    <ProjectReference Include="..\Jorge.Gslate.Model\Jorge.Gslate.Model.csproj" />
+    <ProjectReference Include="..\Jorge.Gslate.Repository\Jorge.Gslate.Repository.csproj" />
+    <ProjectReference Include="..\Jorge.Gslate.Services\Jorge.Gslate.Services.csproj" />
   </ItemGroup>
 
 </Project>
