--- a/Jorge.Gslate.Web/appsettings.Development.json
+++ b/Jorge.Gslate.Web/appsettings.Development.json
@@ -1,9 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+  
+    "ConnectionStrings": {
+      "defaultConnection": "Data Source=localhost;Initial Catalog=Project;User ID=sa;Password=test123;Connection Timeout=9000; MultipleActiveResultSets=True;App=EntityFramework;"
+
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Debug",
+        "System": "Information",
+        "Microsoft": "Information"
+      }
     }
   }
-}
