--- a/Jorge.Gslate.Web/appsettings.json
+++ b/Jorge.Gslate.Web/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "defaultConnection": "Data Source=localhost;Initial Catalog=Project;User ID=sa;Password=test123;Connection Timeout=9000; MultipleActiveResultSets=True;App=EntityFramework;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
